<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#4CB944">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/title"
        android:textColor="#246EB9"
        android:textSize="56sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="300dp"
        android:layout_height="299dp"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sq1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/one"
                app:backgroundTint="#FDFFFC" />

            <Button
                android:id="@+id/sq2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/two"
                app:backgroundTint="#FDFFFC" />

            <Button
                android:id="@+id/sq3"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/three"
                app:backgroundTint="#FDFFFC" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sq4"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/four"
                app:backgroundTint="#FDFFFC" />

            <Button
                android:id="@+id/sq5"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/five"
                app:backgroundTint="#FDFFFC" />

            <Button
                android:id="@+id/sq6"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/six"
                app:backgroundTint="#FDFFFC" />
        </TableRow>

        <TableRow
            android:layout_width="300dp"
            android:layout_height="98dp">

            <Button
                android:id="@+id/sq7"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/seven"
                app:backgroundTint="#FDFFFC" />

            <Button
                android:id="@+id/sq8"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/eight"
                app:backgroundTint="#FDFFFC" />

            <Button
                android:id="@+id/sq9"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/nine"
                app:backgroundTint="#FDFFFC" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/restart"
        android:textColor="#FDFFFC"
        app:backgroundTint="#F06543"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.745" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/back"
        android:textColor="#FDFFFC"
        app:backgroundTint="#F06543"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.853" />
</androidx.constraintlayout.widget.ConstraintLayout>